--- a/about.html
+++ b/about.html
@@ -111,7 +111,8 @@
                         </ul>
                         <div>
                             <a href="./contact.html"
-                                class="btn px-4 py-2_5 bg-secondary text-white btn-animate btn-animate-secondary">Get a
+                                class="btn  px-4 py-2_5 bg-secondary text-white btn-animate btn-animate-secondary">Get
+                                a
                                 Quote</a>
                         </div>
 
@@ -340,7 +341,7 @@
             <div class="row align-items-center">
                 <div class="col-xl-7 pe-md-5">
                     <div class="d-flex flex-wrap align-items-end gap-4">
-                        <div class="position-relative">
+                        <div class="position-relative wow animate__fadeInUp" data-wow-delay="1200">
                             <div class="">
                                 <img src="./img/about/shap-1.png" alt="shap">
                             </div>
@@ -380,14 +381,16 @@
                 </div>
                 <div class="col-xl-5 mt-3  pt-sm-4 mt-sm-5 mt-xl-0">
                     <div class="title" style="max-width: 439px;">
-                        <p class="mb-0 text-secondary">About Us</p>
-                        <h2>Unlocking Potential, One Child at a just Time in school</h2>
+                        <p class="mb-0 text-secondary wow animate__fadeInUp">About Us</p>
+                        <h2 class="wow animate__fadeInUp" data-wow-delay=".3s">Unlocking Potential, One Child at a just
+                            Time in school</h2>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur. Amet lectus mi ultricies dictum facilisis sem. Imperdiet
+                    <p class="wow animate__fadeInUp" data-wow-delay=".4s">Lorem ipsum dolor sit amet consectetur. Amet
+                        lectus mi ultricies dictum facilisis sem. Imperdiet
                         massa turpis sit proin metus volutpat loren ipsum Lorem ipsum dolor sit amet consectetur. Amet
                         lectus mi ultricies dictum</p>
                     <div class="mt-3">
-                        <button class="btn px-4 py-2_5 bg-white text-dark btn-animate btn-animate-green">Get
+                        <button class="btn border px-4 py-2_5 bg-white text-dark btn-animate btn-animate-green">Get
                             a
                             Quote</button>
                     </div>
@@ -400,15 +403,15 @@
         <div class="container">
             <div class="flex-center">
                 <div class="title text-center" style="max-width: 439px;">
-                    <p class="mb-0 text-primary">Our Pricing
+                    <p class="mb-0 text-primary wow animate__fadeInUp">Our Pricing
 
                     </p>
-                    <h2>Transforming lives through knowledge by education</h2>
+                    <h2 class="wow animate__fadeInUp">Transforming lives through knowledge by education</h2>
                 </div>
             </div>
             <div class="row mt-4 gx-0">
                 <div class="col-md-6 col-xl-4 mt-4 mt-lg-0">
-                    <div class="card border-0 shadow">
+                    <div class="card border-0 shadow wow animate__fadeInUp" data-wow-delay=".3s">
                         <div class="card-header border-0 bg-warm fs-3 text-center py-3 fw-bold">Stater Plan</div>
                         <div class="card-body border-0">
                             <h4 class="card-title fw-bold font-jost">
@@ -447,7 +450,7 @@
 
                 </div>
                 <div class="col-md-6 col-xl-4 mt-4 mt-lg-0">
-                    <div class="card border-0 shadow">
+                    <div class="card border-0 shadow wow animate__fadeInUp" data-wow-delay=".5s">
                         <div class="card-header border-0 bg-primary text-white fs-3 text-center py-3 fw-bold ">Golden
                             Plan</div>
                         <div class="card-body border-0">
@@ -486,7 +489,7 @@
 
                 </div>
                 <div class="col-md-6 col-xl-4 mt-4 mt-lg-0">
-                    <div class="card border-0 shadow">
+                    <div class="card border-0 shadow wow animate__fadeInUp" data-wow-delay=".7s">
                         <div class="card-header border-0 bg-warm fs-3 text-center py-3 fw-bold">Platinum Plan</div>
                         <div class="card-body border-0">
                             <h4 class="card-title fw-bold font-jost">
@@ -533,8 +536,8 @@
             <div class="row gx-5">
                 <div class="col-xl-4">
                     <div class="title" style="max-width: 630px;">
-                        <p class="mb-0 text-secondary">Clients Testimonial</p>
-                        <h2>Unlocking the Power of Wonderworks Child</h2>
+                        <p class="mb-0 text-secondary wow animate__fadeInUp">Clients Testimonial</p>
+                        <h2 class="wow animate__fadeInUp">Unlocking the Power of Wonderworks Child</h2>
                     </div>
                 </div>
                 <div class="col-xl-2"></div>
@@ -614,8 +617,8 @@
             <div class="row align-items-center">
                 <div class="col-xl-6">
                     <div class="title" style="max-width: 630px;">
-                        <p class="mb-0 text-dark">Stay With Us</p>
-                        <h2>The path to success starts with educationd</h2>
+                        <p class="mb-0 text-dark wow animate__fadeInUp">Stay With Us</p>
+                        <h2 class="wow animate__fadeInUp">The path to success starts with educationd</h2>
                     </div>
                     <p class="my-4">Lorem ipsum dolor sit amet consectetur adipiscing elit platea pharetra, nostra
                         mattis hendrerit proin mollis pretium facilisi in, ligula volutpat</p>
@@ -636,95 +639,109 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-xl-4 mb-4">
-                    <a href="" class="flex items-center gap-1">
-                        <img src="./img/logo.png" alt="img">
-                        <span class="fw-bold fs-2 ">Ascent</span>
-                    </a>
-                    <p class="mt-3">Yes, there are many notable ma corporate the a od businesses Informati worldwide
+                    <div class="wow animate__fadeInUp" data-wow-delay=".3s">
+                        <a href="" class="flex items-center gap-1">
+                            <img src="./img/logo.png" alt="img">
+                            <span class="fw-bold fs-2 ">Ascent</span>
+                        </a>
+                        <p class="mt-3">Yes, there are many notable ma corporate the a od businesses Informati worldwide
 
-                    </p>
-                    <ul class="d-flex align-items-center gap-3 mt-4 list-unstyled">
-                        <li><a href="" style="width: 40px;height: 40px;"
-                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
-                                    class="fa-brands fa-facebook-f "></i></a></li>
-                        <li><a href="" style="width: 40px;height: 40px;"
-                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
-                                    class="fa-brands fa-twitter"></i></a></li>
-                        <li><a href="" style="width: 40px;height: 40px;"
-                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
-                                    class="fa-brands fa-linkedin"></i></a></li>
-                        <li><a href="" style="width: 40px;height: 40px;"
-                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
-                                    class="fa-brands fa-pinterest-p"></i></a></li>
-                    </ul>
+                        </p>
+                        <ul class="d-flex align-items-center gap-3 mt-4 list-unstyled">
+                            <li><a href="" style="width: 40px;height: 40px;"
+                                    class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
+                                        class="fa-brands fa-facebook-f "></i></a></li>
+                            <li><a href="" style="width: 40px;height: 40px;"
+                                    class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
+                                        class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="" style="width: 40px;height: 40px;"
+                                    class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
+                                        class="fa-brands fa-linkedin"></i></a></li>
+                            <li><a href="" style="width: 40px;height: 40px;"
+                                    class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
+                                        class="fa-brands fa-pinterest-p"></i></a></li>
+                        </ul>
+                    </div>
+
                 </div>
                 <div class="col-sm-6 col-xl-2 mb-4">
-                    <div class="d-inline-block">
-                        <h3 class="fw-semibold">Pages</h3>
-                        <span style="width: 130%; height: 1px;" class="d-block mt-2 bg-background position-relative ">
-                            <span
-                                class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
-                                style="height: 6px; width: 6px;"></span>
-                        </span>
+                    <div class="wow animate__fadeInUp" data-wow-delay=".5s">
+                        <div class="d-inline-block">
+                            <h3 class="fw-semibold">Pages</h3>
+                            <span style="width: 130%; height: 1px;"
+                                class="d-block mt-2 bg-background position-relative ">
+                                <span
+                                    class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
+                                    style="height: 6px; width: 6px;"></span>
+                            </span>
+                        </div>
+
+                        <ul class="d-flex flex-column gap-3 pt-3 list-unstyled list-pages anim-left">
+                            <li><a href="" class="">About Us</a></li>
+                            <li><a href="" class="">Latest Service</a></li>
+                            <li><a href="" class="">Latest Blog And News</a></li>
+                            <li><a href="" class="">FAQ</a></li>
+                            <li><a href="" class="">Our Creative Team Member</a></li>
+                        </ul>
                     </div>
-                    4
-                    <ul class="d-flex flex-column gap-3 pt-3 list-unstyled list-pages anim-left">
-                        <li><a href="" class="">About Us</a></li>
-                        <li><a href="" class="">Latest Service</a></li>
-                        <li><a href="" class="">Latest Blog And News</a></li>
-                        <li><a href="" class="">FAQ</a></li>
-                        <li><a href="" class="">Our Creative Team Member</a></li>
-                    </ul>
+
                 </div>
                 <div class="col-sm-6 col-xl-2 mb-4">
-                    <div class="d-inline-block">
-                        <h3 class="fw-semibold">Contact</h3>
-                        <span style="width: 130%; height: 1px;" class="d-block mt-2 bg-background position-relative ">
-                            <span
-                                class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
-                                style="height: 6px; width: 6px;"></span>
-                        </span>
+                    <div class="wow animate__fadeInUp" data-wow-delay=".7s">
+                        <div class="d-inline-block">
+                            <h3 class="fw-semibold">Contact</h3>
+                            <span style="width: 130%; height: 1px;"
+                                class="d-block mt-2 bg-background position-relative ">
+                                <span
+                                    class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
+                                    style="height: 6px; width: 6px;"></span>
+                            </span>
+                        </div>
+                        <ul class="d-flex flex-column gap-3 pt-3 list-unstyled anim-left">
+                            <li>
+                                <p class="d-flex  align-items-center gap-4">
+                                    <span class="ms-3">1179
+                                        KFC Road, Lisbon, Portugal</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p class="d-flex  align-items-center gap-4">
+                                    <a class="ms-3" href="mailto:Sakib23@gmail.com">Sakib23@gmail.com</a>
+                                </p>
+                            </li>
+                            <li>
+                                <p class="d-flex  align-items-center gap-4">
+                                    <a class="ms-3" href="tel:012547892354">012547892354</a>
+                                </p>
+                            </li>
+                        </ul>
                     </div>
-                    <ul class="d-flex flex-column gap-3 pt-3 list-unstyled anim-left">
-                        <li>
-                            <p class="d-flex  align-items-center gap-4">
-                                <span class="ms-3">1179
-                                    KFC Road, Lisbon, Portugal</span>
-                            </p>
-                        </li>
-                        <li>
-                            <p class="d-flex  align-items-center gap-4">
-                                <a class="ms-3" href="mailto:Sakib23@gmail.com">Sakib23@gmail.com</a>
-                            </p>
-                        </li>
-                        <li>
-                            <p class="d-flex  align-items-center gap-4">
-                                <a class="ms-3" href="tel:012547892354">012547892354</a>
-                            </p>
-                        </li>
-                    </ul>
+
                 </div>
                 <div class="col-md-6 col-xl-4 mb-4">
+                    <div class="wow animate__fadeInUp" data-wow-delay=".7s">
+                        <div class="d-inline-block">
+                            <h3 class="fw-semibold " style="white-space: nowrap;">Our Newsletter
+                            </h3>
+                            <span style="width: 130%; height: 1px;"
+                                class="d-block mt-2 bg-background position-relative ">
+                                <span
+                                    class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
+                                    style="height: 6px; width: 6px;"></span>
+                            </span>
+                        </div>
+                        <p class="pt-3">
+                            Subscribe our newsletter to get our latest update
+                        </p>
+                        <div class="position-relative  mt-5">
+                            <input type="text" placeholder="Enter Your Email"
+                                class="rounded-3 border-0 text-white  ps-3 py-3  w-100 " style="background: #FFFFFF1A;">
+                            <button style="right: 10px;"
+                                class="btn px-4 py-2 rounded-3 bg-primary text-white btn-animate btn-animate-green  position-absolute  top-50 absolute-y-center d-flex gap-3 align-items-center">
+                                <i class="fa-solid fa-arrow-right"></i></button>
+                        </div>
+                    </div>
 
-                    <div class="d-inline-block">
-                        <h3 class="fw-semibold " style="white-space: nowrap;">Our Newsletter
-                        </h3>
-                        <span style="width: 130%; height: 1px;" class="d-block mt-2 bg-background position-relative ">
-                            <span
-                                class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
-                                style="height: 6px; width: 6px;"></span>
-                        </span>
-                    </div>
-                    <p class="pt-3">
-                        Subscribe our newsletter to get our latest update
-                    </p>
-                    <div class="position-relative  mt-5">
-                        <input type="text" placeholder="Enter Your Email"
-                            class="rounded-3 border-0 text-white  ps-3 py-3  w-100 " style="background: #FFFFFF1A;">
-                        <button style="right: 10px;"
-                            class="btn px-4 py-2 rounded-3 bg-primary text-white btn-animate btn-animate-green  position-absolute  top-50 absolute-y-center d-flex gap-3 align-items-center">
-                            <i class="fa-solid fa-arrow-right"></i></button>
-                    </div>
 
                 </div>
             </div>
@@ -732,11 +749,12 @@
 
             <div class="row mt-5 pb-4 opacity-75">
                 <div class="col-xl-6">
-                    <p>© Yoursitename 2024 | All Rights Reserved</p>
+                    <p class="wow animate__fadeInLeft" data-wow-delay=".3s">© Yoursitename 2024 | All Rights Reserved
+                    </p>
                 </div>
                 <div class="col-xl-6">
-                    <ul
-                        class="d-flex   justify-content-xl-end align-items-center gap-2 gap-sm-5  fadeInRight list-unstyled">
+                    <ul class="d-flex   justify-content-xl-end align-items-center gap-2 gap-sm-5  fadeInRight list-unstyled wow animate__fadeInRight"
+                        data-wow-delay=".3s">
                         <li><a href="">Trams &amp; Condition</a></li>
                         <li><a href="">Privacy Policy</a></li>
                         <li><a href="">Contact Us</a></li>
